fix Collapse

--- a/src/app/modules/employees/components/employee-edit-cv/employee-edit-cv.component.scss
+++ b/src/app/modules/employees/components/employee-edit-cv/employee-edit-cv.component.scss
@@ -4,4 +4,15 @@
 .forms__wrapper {
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.cv__wrapper {
+  height: 100%;
+}
+.form__footer {
+  margin-top: 30px;
+}
+button:last-child {
+  margin-left: 25px;
 }
