--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,9 +29,6 @@
   background-color: #ffffff;
 }
 
-// .form__row:first-child {
-//   // margin-top: 40px;
-// }
 .form__row {
   display: flex;
   justify-content: flex-start;
@@ -46,11 +43,15 @@
 .form__item:last-child {
   margin-right: 0;
 }
+small {
+  font-size: 11px !important;
+}
 app-input,
 app-datepicker,
-app-textarea {
-  width: 200px;
-}
+app-textarea,
 app-select {
-  width: 400px;
+  min-width: 123px;
+}
+app-input {
+  max-width: 185px;
 }
